crates/plotnik-lib/tests/02-parser/recovery_unexpected/predicate_node_arg_paren_balanced.txt
(call_expression (#eq? (identifier) @x))
==== diagnostics ====
error: tree-sitter predicates are not supported
 --> query.ptk:1:19
  |
1 | (call_expression (#eq? (identifier) @x))
  |                   ^^^^
  |
help: use `(node == "x")`
